@@ -325,6 +325,7 @@ Version 1.13.0-dev:
    * Fix bug #22643: Cannot compile with boost 1.56
    * Fix issue where the chatlog for a replayed game could not be opened in single player.
      The chatlog can now always be opened.
+   * Fix bug #22650: nontranslatable strings displayed in tooltips for terrain icons
 
 Version 1.11.11:
  * Add-ons server:
